Update and rename 2020-8-16-Tema2 to 2020-8-16-Tema2.md

--- a/_posts/2020-8-16-Tema2.md
+++ b/_posts/2020-8-16-Tema2.md
@@ -1,6 +1,7 @@
 ---
 layout: post
-title: You're up and running!
+title: Base de Datos-Concepto,Tipos y Ejemplos
+author: Eric Choez
 ---
 Base de Datos
 Concepto-Tipos y Ejemplos
